--- a/AutomationTools/home/templates/home/home.html
+++ b/AutomationTools/home/templates/home/home.html
@@ -5,9 +5,11 @@
     <title>Home</title>
 </head>
 <body onload="page_load()">
-{% include "home/Header.html" %}
+    {% include "home/Header.html" %}
 
-<p>Home Page</p>
+    <p>
+        Home Page
+    </p>
 
     <script>
         function page_load() {
